Fix two runtime-only 6.2.0 gaps: logback converter class move, Arrow/JDK25 driver
logback-spring.xml's LogUserConverter moved package when atoti-server-apm-starter
was folded into other 6.2 artifacts. Separately, arrow-flight-sql-jdbc-driver's
shaded Netty allocator doesn't work on Java 25 (apache/arrow-java#728) and blocks
every DirectQuery data-node from starting; swapped it for the unshaded
flight-sql-jdbc-core + arrow-memory-unsafe. Both found and verified live via a
full Scenario 1 rehearsal rerun on the 6.2.0 build. MIGRATION_6.2.md updated with
both fixes and a corrected claim about logging config being unaffected.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>